namespace LibSys.Domain.User
{
    using System;
    using System.Collections.Generic;
    using System.Linq;
    using System.Text;
    using System.Threading.Tasks;

    public enum Permissions
    {
        deleteMedia,
        editMedia,
        addMedia,
        borrowMedia,
        returnMedia
    }
}
